--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,13 @@
 # General
 --------------------------------------------------------------*/
 /* block images================ */
-.img-fluid{
+/* .img-fluid{
 z-index: 999;
 position: absolute;
 top: 12px;
 bottom: 23px;
 left: 50px;
-}
+} */
 /*End block images================ */
 
 .puppy img{
