--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -551,3 +551,10 @@ h1, h2, h3, h4, h5, h6, .font-heading {
     grid-column: 1/2 !important;
  }
 }
+.btn-submit{
+  border: none;
+  padding: 10px;
+  width: 100%;
+  color: #fff;
+  background-color: #000;
+}
